# letters

./: .gitignore  AUTHORS  LICENSE  Makefile  Makefile.am  NOTES  README.md  amikinput.c  amiraw.c  config.h  configure.ac  dict.c  dict.c.in  highscore.c  kinput.c  kinput.h  letters.c  letters.h  letters.man.in  old-term.h  term.c  term.h  terms.h  usleep.c  usleep5.c  word.c
